making test code compatible with Java 8